--- a/index.html
+++ b/index.html
@@ -28,6 +28,16 @@
   <button id="btn">compute</button>
 
   <p id="result"></p>
+  <p>
+    Insert the information in the form and the calculator will determine the wave frequency<br> 
+    What is the wave frequency?<br>
+    The wave frequency is the amount of waves which passes through a fixed point at a specific time period.<br>
+    How to calculate wave frequency?<br>
+    To calculate wave frequency you should use the following formula:<br>
+    wave frequency = wave velocity / wave length<br>
+    Why use wave frequency calculator?<br>
+    The wave frequency calculator is the amount of waves that passes through a fixed point at a specific period.<br>
+</p>
   <script src="app.js"></script>
 </body>
 </html>
